Fixes code color in dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -436,7 +436,7 @@ body.remarkdown {
     --text-color: #d6d6d6;
     --md-deco-color: #fbe36e;
     --border-color: #222222;
-    --code-color: #666666;
+    --code-color: #a6a6a6;
     --tag-color: #fdfdfd;
     --tag-bg-color: #8f00d6;
     --time-color: #555555;
